moves scritps to the scripts folder

--- a/Scripts/Runtime/UnityUtils.Odin.asmdef
+++ b/Scripts/Runtime/UnityUtils.Odin.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "OdinUtils",
+    "name": "UnityUtils.Odin",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
