--- a/Scripts/Editor/OdinUtils.Editor.asmdef
+++ b/Scripts/Editor/OdinUtils.Editor.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:a8d015c3e0000b8498299a9f0decdd0d",
         "GUID:2d2abd0f58cd9a948a4d0f37b5dad390",
+        "GUID:9104f28baed89644286c65222185ea59",
         "GUID:857e1bfdf73ab3149b2af79b24e911ac"
     ],
     "includePlatforms": [
